@@ -2,7 +2,7 @@
  * drivers/mtd/at25.c
  * Driver for SPI-based AT25DF321 (32Mbit) flash.
  *
- *   Copyright (C) 2009-2012 Gregory Nutt. All rights reserved.
+ *   Copyright (C) 2009-2013 Gregory Nutt. All rights reserved.
  *   Author: Gregory Nutt <gnutt@nuttx.org>
  *           Petteri Aimonen <jpa@nx.mail.kapsi.fi>
  *
@@ -664,10 +664,12 @@ FAR struct mtd_dev_s *at25_initialize(FAR struct spi_dev_s *dev)
    * to be extended to handle multiple FLASH parts on the same SPI bus.
    */
 
-  priv = (FAR struct at25_dev_s *)kmalloc(sizeof(struct at25_dev_s));
+  priv = (FAR struct at25_dev_s *)kzalloc(sizeof(struct at25_dev_s));
   if (priv)
     {
-      /* Initialize the allocated structure */
+      /* Initialize the allocated structure (unsupported methods were
+       * nullified by kzalloc).
+       */
 
       priv->mtd.erase  = at25_erase;
       priv->mtd.bread  = at25_bread;
