@@ -2,7 +2,7 @@
  * drivers/mtd/at45db.c
  * Driver for SPI-based AT45DB161D (16Mbit)
  *
- *   Copyright (C) 2010-2011 Gregory Nutt. All rights reserved.
+ *   Copyright (C) 2010-2011, 2013 Gregory Nutt. All rights reserved.
  *   Author: Gregory Nutt <gnutt@nuttx.org>
  *
  * Redistribution and use in source and binary forms, with or without
@@ -827,10 +827,12 @@ FAR struct mtd_dev_s *at45db_initialize(FAR struct spi_dev_s *spi)
    * to be extended to handle multiple FLASH parts on the same SPI bus.
    */
 
-  priv = (FAR struct at45db_dev_s *)kmalloc(sizeof(struct at45db_dev_s));
+  priv = (FAR struct at45db_dev_s *)kzalloc(sizeof(struct at45db_dev_s));
   if (priv)
     {
-      /* Initialize the allocated structure */
+      /* Initialize the allocated structure. (unsupported methods were
+       * nullified by kzalloc).
+       */
 
       priv->mtd.erase  = at45db_erase;
       priv->mtd.bread  = at45db_bread;
