@@ -208,6 +208,7 @@ int main(int argc, char **argv, char **envp)
   printf("# undef CONFIG_FS_FAT\n");
   printf("# undef CONFIG_FS_ROMFS\n");
   printf("# undef CONFIG_FS_NXFFS\n");
+  printf("# undef CONFIG_FS_SMARTFS\n");
   printf("# undef CONFIG_FS_BINFS\n");
   printf("# undef CONFIG_NFS\n");
   printf("#endif\n\n");
@@ -215,7 +216,8 @@ int main(int argc, char **argv, char **envp)
   printf("#undef CONFIG_FS_READABLE\n");
   printf("#undef CONFIG_FS_WRITABLE\n");
   printf("#if defined(CONFIG_FS_FAT) || defined(CONFIG_FS_ROMFS) || defined(CONFIG_USBMSC) || \\\n");
-  printf("    defined(CONFIG_FS_NXFFS) || defined(CONFIG_FS_BINFS) || defined(CONFIG_NFS)\n");
+  printf("    defined(CONFIG_FS_NXFFS) || defined(CONFIG_FS_SMARTFS) || defined(CONFIG_FS_BINFS) || \\\n");
+  printf("    defined(CONFIG_NFS)\n");
   printf("# define CONFIG_FS_READABLE 1\n");
   printf("#endif\n\n");
   printf("#if defined(CONFIG_FS_FAT) || defined(CONFIG_USBMSC) || defined(CONFIG_FS_NXFFS) || \\\n");
